Fix blurry text

--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -9,8 +9,12 @@
     src: url("fonts/Roboto.ttf") format('truetype');
 }
 
+@font-face{
+    font-family: 'Roboto Mono';
+    src: url("fonts/RobotoMono.ttf") format('truetype');
+}
+
 *{
-    font-family: 'Roboto' !important;
     font-weight: 300;
     line-height: 1.15;
 }
@@ -25,6 +29,7 @@ canvas{
     position: fixed;
     top: 0; left: 0;
     opacity: 0.05;
+    z-index: 0;
 }
 
 html{
@@ -43,15 +48,14 @@ h3 {font-size: 1.75rem !important;}
 h4 {font-size: 1.5rem !important;}
 h5 {font-size: 1.25rem !important;}
 h6 {font-size: 1.15rem !important;}
-p {font-size: 1rem !important; line-height: 1.25 !important;
-  transform: translateZ(0);}
+p {font-size: 1rem !important; line-height: 1.25 !important;}
 
 body{
     width: 100%; height: 100vh;
     background: $primary_dark;
     cursor: default;
     overflow: hidden;
-    transform: translateZ(0);
+    font-family: 'Roboto' !important;
 }
 
 .btn{
@@ -71,7 +75,6 @@ body{
     text-transform: uppercase;
     transition: all 0.25s ease-in-out;
     cursor: pointer;
-    transform: translateZ(0);
     &:hover{
         border: solid 2px rgba($white, 0.75) !important;
         background: rgba($white, 0.9);
@@ -119,7 +122,6 @@ input[type='email']{
     font-size: 1rem;
     border: solid 2px rgba($black, 0.125);
     outline: none;
-    transform: translateZ(0);
 }
 
 #container{
@@ -128,16 +130,34 @@ input[type='email']{
     overflow: hidden;
     background: rgba($black, 0.5);
     transition: all 0.25s ease-in-out;
+    z-index: 1;
+    text-align: center;
     &.hidden{
-        left: 400px;
+        //left: 200px;
         @media (max-width: 768px){
-            left: 100%;
+            //left: 50%;
         }
+        &:after{
+            opacity: 0.5;
+            z-index: 0;
+        }
+    }
+    &:after{
+        content: '';
+        display: block;
+        position: absolute;
+        top: 0; left: 0;
+        width: 100%; height: 100%;
+        background: $black;
+        opacity: 0;
+        z-index: -1;
+        transition: all 0.5s ease;
     }
 }
 
 .content{
-    position: absolute;
-    top: 50%; left: 50%;
-    transform: translate(-50%, -50%);
+    position: relative;
+    display: inline-block;
+    top: 50%; left: 0;
+    transform: translate(0, -50%);
 }
